--- a/tegel/src/components/popover-canvas/popover-canvas.scss
+++ b/tegel/src/components/popover-canvas/popover-canvas.scss
@@ -7,7 +7,8 @@
 
   min-width: 160px;
   min-height: 160px;
-  background-color: var(--sdds-popover-bg-default);
+  color: var(--sdds-popover-canvas-color-default);
+  background-color: var(--sdds-popover-canvas-bg-default);
   padding: 16px;
   box-shadow: 0 3px 3px rgb(0 0 0 / 15%), 0 -1px 1px rgb(0 0 0 / 10%);
   border-radius: 4px;
